SVG Gaussian blur in 1-dimension is incorrect https://bugs.webkit.org/show_bug.cgi?id=73029

Patch by Florin Malita <fmalita@google.com> on 2011-12-01
Reviewed by Simon Fraser.

Source/WebCore:

Ensure that the last blurBox result is stored when applying one-dimensional blurs.

* platform/graphics/filters/FEGaussianBlur.cpp:
(WebCore::FEGaussianBlur::platformApplyGeneric):

LayoutTests:

* platform/chromium-win/svg/filters/feGaussianBlur-expected.png: Rebaseline.

Canonical link: https://commits.webkit.org/90110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101638 268f45cc-cd09-0410-ab3c-d52691b4dbfc